change name as alexa doesn't allow about as an invocation

--- a/tweet-me/lambda/custom/package.json
+++ b/tweet-me/lambda/custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tweet-about",
+  "name": "tweet-me",
   "version": "1.0.0",
   "description": "allows alexa to tweet about a phrase",
   "main": "index.js",
